# HotCueMesh

./: .gitignore  CMakeLists.txt  README.md  RunAllLocal.ps1  build_obs_plugin_in_tree.ps1  package-lock.json
InitializerService/: Cargo.toml
InitializerService/src/: main.rs
LightingController/: ArtnetInterface.cs  AudioManager.cs  DMXOut.cs  MidiInputManager.cs  PassthroughNetworking.cs  Preset.cs  Program.cs  StreamDeckCS2DMX.csproj  StreamDeckCS2DMX.sln  UDPListener.cs
OBSReceiverPlugin/: Channel.cpp  Channel.hpp  ObsEvents.cpp  ObsEvents.hpp  Plugin.cpp  StateReader.cpp  StateReader.hpp
OrchestrationService/: configUpdater.go  db_layer.go  go.mod  go.sum  listener.go  main.go  model.go  networkSender.go  orchestration_service_dummy.py  processor.go  zeromq_listener.go  zeromq_output.go
PersistenceService/: application.yml  build.gradle  settings.gradle
PersistenceService/data/: app.db
PersistenceService/src/main/java/com/ikamon/hotCueMesh/persistenceService/: PersistenceServiceApplication.java
PersistenceService/src/main/java/com/ikamon/hotCueMesh/persistenceService/config/: MessagerConfiguration.java  RestConfiguration.java
PersistenceService/src/main/java/com/ikamon/hotCueMesh/persistenceService/constants/: CueColor.java  CueMatch.java  Decks.java  HotcueType.java
PersistenceService/src/main/java/com/ikamon/hotCueMesh/persistenceService/controller/: MappingController.java  ObsStateController.java
PersistenceService/src/main/java/com/ikamon/hotCueMesh/persistenceService/dao/: TriggerRepoService.java
PersistenceService/src/main/java/com/ikamon/hotCueMesh/persistenceService/dto/: ActionDto.java  ActionTriggerRequest.java  ConfigState.java  ObsState.java  TriggerDto.java
PersistenceService/src/main/java/com/ikamon/hotCueMesh/persistenceService/dto/obs/: Filter.java  Scene.java  Source.java
PersistenceService/src/main/java/com/ikamon/hotCueMesh/persistenceService/dto/orchestrator/: TriggerActionOrch.java  TriggerOrch.java
PersistenceService/src/main/java/com/ikamon/hotCueMesh/persistenceService/entity/: Action.java  Trigger.java
PersistenceService/src/main/java/com/ikamon/hotCueMesh/persistenceService/repository/: ActionRepository.java  TriggerRepository.java
PersistenceService/src/main/java/com/ikamon/hotCueMesh/persistenceService/service/: DataService.java  ObsStateService.java  OrchestratorService.java
PersistenceService/src/test/java/com/ikamon/hotCueMesh/persistenceService/: PersistenceServiceApplicationTests.java
customizer-interface/: package-lock.json  package.json
customizer-interface/src/: .env  App.css  App.js  api.js  config.js
customizer-interface/src/components/: ActionItem.js  TriggerItem.js
virtual-dj-plugin/: Cargo.toml
virtual-dj-plugin/CPP/: UdpSender.cpp  UdpSender.h  VJDeckTCP.vcxproj
virtual-dj-plugin/src/: lib.rs
